--- a/falco/templates/certs-secret.yaml
+++ b/falco/templates/certs-secret.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "falco.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "falco.fullname" $ }}
+  namespace: {{ $.Release.Namespace }}
   labels:
-    {{- include "falco.labels" . | nindent 4 }}
+    {{- include "falco.labels" $ | nindent 4 }}
 type: Opaque
 data:
   {{ $key := .server.key }}
