fix(falco): fix name of the falco certs secret
Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/falco/templates/certs-secret.yaml
+++ b/falco/templates/certs-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "falco.fullname" $ }}
+  name: {{ include "falco.fullname" $ }}-certs
   namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "falco.labels" $ | nindent 4 }}
