--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -53,7 +53,7 @@ config:
   extraEnv: []
   # -- DEBUG environment variable
   debug: false
-  # -- a list of escaped comma separated custom fields to add to falco events, syntax is "key:value\,key:value"
+  # -- a list of escaped comma separated custom fields to add to falco events. If the value starts with % the relative env var is used. The syntax is "key:value\,key:value".
   customfields: ""
 
   # -- folder which will used to store client.crt, client.key and ca.crt files for mutual tls (default: "/etc/certs")
