--- a/falco/ci/ci-values.yaml
+++ b/falco/ci/ci-values.yaml
@@ -1,5 +1,6 @@
 # CI values for Falco.
 # To deploy Falco on CI we need to set an argument to bypass the installation
 # of the kernel module, so we bypass that.
-extraArgs:
+extra:
+  args:
   - --userspace
