update(falco/ci): fully disable the driver when running in CI
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/ci/ci-values.yaml
+++ b/falco/ci/ci-values.yaml
@@ -1,6 +1,16 @@
 # CI values for Falco.
-# To deploy Falco on CI we need to set an argument to bypass the installation
-# of the kernel module, so we bypass that.
+# The following values will bypass the installation of the kernel module
+# and disable the kernel space driver.
+
+# disable the kernel space driver
+driver:
+  enabled: false
+
+# make Falco run in userspace only mode
 extra:
   args:
-  - --userspace
+    - --userspace
+
+# enforce /proc mounting since Falco still tries to scan it
+mounts:
+  enforceProcMount: true
