--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -200,7 +200,12 @@ driver:
         tag: ""
       # -- Extra environment variables that will be pass onto Falco driver loader init container.
       env: {}
+      # -- Arguments to pass to the Falco driver loader init container.
       args: []
+      # -- Resources requests and limits for the Falco driver loader init container.
+      resources: {}
+      # -- Security context for the Falco driver loader init container. Overrides the default security context. If driver.mode == "module" you must at least set `privileged: true`.
+      securityContext: {}
 
 # Collectors for data enrichment (scenario requirement)
 collectors:
