--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -86,6 +86,8 @@ spec:
               value: {{ .Values.config.debug | quote }}
             - name: CUSTOMFIELDS
               value: {{ .Values.config.customfields | quote }}
+            - name: TEMPLATEDFIELDS
+              value: {{ .Values.config.templatedfields | quote }}
             - name: MUTUALTLSFILESPATH
               value: {{ .Values.config.mutualtlsfilespath | quote }}
             {{- if .Values.config.extraEnv }}
