feat(slack-channel): Values/docs/config update to add Slack channel option
from falcosecurtiy/falcosidekick#366

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -15,6 +15,7 @@ type: Opaque
 data:
   # Slack Output
   SLACK_WEBHOOKURL: "{{ .Values.config.slack.webhookurl | b64enc }}"
+  SLACK_CHANNEL: "{{ .Values.config.slack.channel | b64enc }}"
   SLACK_OUTPUTFORMAT: "{{ .Values.config.slack.outputformat | b64enc }}"
   SLACK_FOOTER: "{{ .Values.config.slack.footer | b64enc }}"
   SLACK_ICON: "{{ .Values.config.slack.icon | b64enc }}"
