feat(gotify): Values/docs/config update to add Gotify output
from falcosecurtiy/falcosidekick#362

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -143,6 +143,12 @@ data:
   GCP_CLOUDRUN_JWT: "{{ .Values.config.gcp.cloudrun.jwt | b64enc }}"
   GCP_CLOUDRUN_MINIMUMPRIORITY: "{{ .Values.config.gcp.cloudrun.minimumpriority | b64enc }}"
 
+  GOTIFY_HOSTPORT: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
+  GOTIFY_TOKEN: "{{ .Values.config.gotify.token | b64enc }}"
+  GOTIFY_FORMAT: "{{ .Values.config.gotify.format | b64enc }}"
+  GOTIFY_CHECKCERT: "{{ .Values.config.gotify.checkcert | b64enc }}"
+  GOTIFY_MINIMUMPRIORITY: "{{ .Values.config.gotify.minimumpriority | b64enc }}"
+
   # GoogleChat Output
   GOOGLECHAT_WEBHOOKURL: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
   GOOGLECHAT_OUTPUTFORMAT: "{{ .Values.config.googlechat.outputformat | b64enc }}"
