feat(gotify): Values/docs/config update to update Influxdb output
from falcosecurtiy/falcosidekick#359

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -78,9 +78,13 @@ data:
   # InfluxDB Output
   INFLUXDB_USER: "{{ .Values.config.influxdb.user | b64enc }}"
   INFLUXDB_PASSWORD: "{{ .Values.config.influxdb.password | b64enc }}"
+  INFLUXDB_ORGANIZATION: "{{ .Values.config.influxdb.organization | b64enc }}"
+  INFLUXDB_TOKEN: "{{ .Values.config.influxdb.token | b64enc }}"
   INFLUXDB_HOSTPORT: "{{ .Values.config.influxdb.hostport | b64enc }}"
   INFLUXDB_MINIMUMPRIORITY: "{{ .Values.config.influxdb.minimumpriority | b64enc }}"
   INFLUXDB_DATABASE: "{{ .Values.config.influxdb.database | b64enc }}"
+  INFLUXDB_BUCKET: "{{ .Values.config.influxdb.bucket | b64enc }}"
+  INFLUXDB_PRECISION: "{{ .Values.config.influxdb.precision | b64enc }}"
   INFLUXDB_MUTUALTLS: "{{ .Values.config.influxdb.mutualtls | printf "%t" | b64enc }}"
   INFLUXDB_CHECKCERT: "{{ .Values.config.influxdb.checkcert | printf "%t" | b64enc }}"
 
