feat(zincsearch): Values/docs/config update to add zincsearch output
from falcosecurtiy/falcosidekick#360

Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -147,6 +147,7 @@ data:
   GCP_CLOUDRUN_JWT: "{{ .Values.config.gcp.cloudrun.jwt | b64enc }}"
   GCP_CLOUDRUN_MINIMUMPRIORITY: "{{ .Values.config.gcp.cloudrun.minimumpriority | b64enc }}"
 
+  # Gotify Output
   GOTIFY_HOSTPORT: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
   GOTIFY_TOKEN: "{{ .Values.config.gotify.token | b64enc }}"
   GOTIFY_FORMAT: "{{ .Values.config.gotify.format | b64enc }}"
@@ -168,6 +169,14 @@ data:
   ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
   ELASTICSEARCH_USERNAME: "{{ .Values.config.elasticsearch.username | b64enc }}"
   ELASTICSEARCH_PASSWORD: "{{ .Values.config.elasticsearch.password | b64enc }}"
+
+  # Zincsearcj Output
+  ZINC_HOSTPORT: "{{ .Values.config.zincsearch.hostport | b64enc }}"
+  ZINC_INDEX: "{{ .Values.config.zincsearch.index | b64enc }}"
+  ZINC_MINIMUMPRIORITY: "{{ .Values.config.zincsearch.minimumpriority | b64enc }}"
+  ZINC_CHECKCERT: "{{ .Values.config.zincsearch.checkcert | printf "%t" | b64enc }}"
+  ZINC_USERNAME: "{{ .Values.config.zincsearch.username | b64enc }}"
+  ZINC_PASSWORD: "{{ .Values.config.zincsearch.password | b64enc }}"
 
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
