--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -88,6 +88,8 @@ resources:
     cpu: 100m
     memory: 512Mi
   # -- Maximum amount of resources that Falco container could get.
+  # If you are enabling more than one source in falco, than consider to increase
+  # the cpu limits.
   limits:
     cpu: 1000m
     memory: 1024Mi
@@ -311,18 +313,18 @@ falcosidekick:
 # falco.yaml config  #
 ######################
 falco:
-  # File(s) or Directories containing Falco rules, loaded at startup.
-  # The name "rules_file" is only for backwards compatibility.
-  # If the entry is a file, it will be read directly. If the entry is a directory,
-  # every file in that directory will be read, in alphabetical order.
-  #
-  # falco_rules.yaml ships with the falco package and is overridden with
-  # every new software version. falco_rules.local.yaml is only created
-  # if it doesn't exist. If you want to customize the set of rules, add
-  # your customizations to falco_rules.local.yaml.
-  #
-  # The files will be read in the order presented here, so make sure if
-  # you have overrides they appear in later files.
+# File(s) or Directories containing Falco rules, loaded at startup.
+# The name "rules_file" is only for backwards compatibility.
+# If the entry is a file, it will be read directly. If the entry is a directory,
+# every file in that directory will be read, in alphabetical order.
+#
+# falco_rules.yaml ships with the falco package and is overridden with
+# every new software version. falco_rules.local.yaml is only created
+# if it doesn't exist. If you want to customize the set of rules, add
+# your customizations to falco_rules.local.yaml.
+#
+# The files will be read in the order presented here, so make sure if
+# you have overrides they appear in later files.
   # -- The location of the rules files that will be consumed by Falco.
   rules_file:
     - /etc/falco/falco_rules.yaml
@@ -376,7 +378,9 @@ falco:
   # time zone, as governed by /etc/localtime.
   time_format_iso_8601: false
 
-  # -- Whether to output events in json or text.
+  # -- If "true", print falco alert messages and rules file
+  # loading/validation results as json, which allows for easier
+  # consumption by downstream programs. Default is "false".
   json_output: false
 
   # -- When using json output, whether or not to include the "output" property
@@ -481,6 +485,61 @@ falco:
     # after which you want Falco to alert.
     max_consecutives: 1000
 
+  # --- [Description]
+  #
+  # This is an index that controls the dimension of the syscall buffers.
+  # The syscall buffer is the shared space between Falco and its drivers where all the syscall events
+  # are stored.
+  # Falco uses a syscall buffer for every online CPU, and all these buffers share the same dimension.
+  # So this parameter allows you to control the size of all the buffers!
+  #
+  # --- [Usage]
+  #
+  # You can choose between different indexes: from `1` to `10` (`0` is reserved for future uses).
+  # Every index corresponds to a dimension in bytes:
+  #
+  # [(*), 1 MB, 2 MB, 4 MB, 8 MB, 16 MB, 32 MB, 64 MB, 128 MB, 256 MB, 512 MB]
+  #   ^    ^     ^     ^     ^     ^      ^      ^       ^       ^       ^
+  #   |    |     |     |     |     |      |      |       |       |       |
+  #   0    1     2     3     4     5      6      7       8       9       10
+  #
+  # As you can see the `0` index is reserved, while the index `1` corresponds to
+  # `1 MB` and so on.
+  #
+  # These dimensions in bytes derive from the fact that the buffer size must be:
+  # (1) a power of 2.
+  # (2) a multiple of your system_page_dimension.
+  # (3) greater than `2 * (system_page_dimension)`.
+  #
+  # According to these constraints is possible that sometimes you cannot use all the indexes, let's consider an
+  # example to better understand it:
+  # If you have a `page_size` of 1 MB the first available buffer size is 4 MB because 2 MB is exactly
+  # `2 * (system_page_size)` -> `2 * 1 MB`, but this is not enough we need more than `2 * (system_page_size)`!
+  # So from this example is clear that if you have a page size of 1 MB the first index that you can use is `3`.
+  #
+  # Please note: this is a very extreme case just to let you understand the mechanism, usually the page size is something
+  # like 4 KB so you have no problem at all and you can use all the indexes (from `1` to `10`).
+  #
+  # To check your system page size use the Falco `--page-size` command line option. The output on a system with a page
+  # size of 4096 Bytes (4 KB) should be the following:
+  #
+  # "Your system page size is: 4096 bytes."
+  #
+  # --- [Suggestions]
+  #
+  # Before the introduction of this param the buffer size was fixed to 8 MB (so index `4`, as you can see
+  # in the default value below).
+  # You can increase the buffer size when you face syscall drops. A size of 16 MB (so index `5`) can reduce
+  # syscall drops in production-heavy systems without noticeable impact. Very large buffers however could
+  # slow down the entire machine.
+  # On the other side you can try to reduce the buffer size to speed up the system, but this could
+  # increase the number of syscall drops!
+  # As a final remark consider that the buffer size is mapped twice in the process' virtual memory so a buffer of 8 MB
+  # will result in a 16 MB area in the process virtual memory.
+  # Please pay attention when you use this parameter and change it only if the default size doesn't fit your use case.
+  # -- This is an index that controls the dimension of the syscall buffers.
+  syscall_buf_size_preset: 4
+
   # Falco continuously monitors outputs performance. When an output channel does not allow
   # to deliver an alert within a given deadline, an error is reported indicating
   # which output is blocking notifications.
@@ -499,14 +558,17 @@ falco:
   output_timeout: 2000
 
   # A throttling mechanism implemented as a token bucket limits the
-  # rate of falco notifications. This throttling is controlled by the following configuration
-  # options:
+  # rate of Falco notifications. One rate limiter is assigned to each event
+  # source, so that alerts coming from one can't influence the throttling
+  # mechanism of the others. This is controlled by the following options:
   #  - rate: the number of tokens (i.e. right to send a notification)
-  #    gained per second. Defaults to 1.
+  #    gained per second. When 0, the throttling mechanism is disabled.
+  #    Defaults to 0.
   #  - max_burst: the maximum number of tokens outstanding. Defaults to 1000.
   #
-  # With these defaults, falco could send up to 1000 notifications after
-  # an initial quiet period, and then up to 1 notification per second
+  # With these defaults, the throttling mechanism is disabled.
+  # For example, by setting rate to 1 Falco could send up to 1000 notifications
+  # after an initial quiet period, and then up to 1 notification per second
   # afterward. It would gain the full burst back after 1000 seconds of
   # no activity.
 
