Fix documentation and default values.yaml for falco helm chart
Signed-off-by: santrancisco <san.tran@ebfe.pw>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -346,7 +346,7 @@ falco:
   plugins:
     - name: k8saudit
       library_path: libk8saudit.so
-      init_config:
+      init_config: ""
       #   maxEventSize: 262144
       #   webhookMaxBatchSize: 12582912
       #   sslCertificate: /etc/falco/falco.pem
