feat: add variable namespaceOverride to falco chart
Allows for setting Falco's namespace in its values.yaml, in addition
to the existing option of setting namespace in the cli call.

Existing deployments that do not set this value will not be impacted
as templating uses the release namespace as default, unless the override
variable is set.

Also bump chart version to v2.3.0.

Signed-off-by: Thomas Antonio <thomas.antonio@gmail.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -20,6 +20,8 @@ imagePullSecrets: []
 nameOverride: ""
 # -- Same as nameOverride but for the fullname.
 fullnameOverride: ""
+# -- Override the deployment namespace
+namespaceOverride: ""
 
 rbac:
   # Create and use rbac resources when set to true. Needed to fetch k8s metadata from the api-server.
