--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -211,6 +211,20 @@ driver:
       # -- Security context for the Falco driver loader init container. Overrides the default security context. If driver.mode == "module" you must at least set `privileged: true`.
       securityContext: {}
 
+# -- Gvisor configuration. Based on your system you need to set the appropriate values.
+# Please, rembember to add pod tolerations and affinities in order to schedule the Falco pods in the gVisor enabled nodes.
+gvisor:
+  # -- Set it to true if you want to deploy Falco with gVisor support.
+  enabled: false
+  # -- Runsc container runtime configuration. Falco needs to interact with it in order to intercept the activity of the sandboxed pods.
+  runsc:
+    # -- Absolute path of the `runsc` binary in the k8s nodes.
+    path: /home/containerd/usr/local/sbin
+    # -- Absolute path of the root directory of the `runsc` container runtime. It is of vital importance for Falco since `runsc` stores there the information of the workloads handled by it;
+    root: /run/containerd/runsc
+    # -- Absolute path of the `runsc` configuration file, used by Falco to set its configuration and make aware `gVisor` of its presence.
+    config: /run/containerd/runsc/config.toml
+
 # Collectors for data enrichment (scenario requirement)
 collectors:
   # -- Enable/disable all the metadata collectors.
