--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -367,7 +367,7 @@ falco:
   # and then change this to:
   # load_plugins: [cloudtrail, json]
   # -- Add here the names of the plugins that you want to be loaded by Falco. Please make sure that
-  # plugins have ben configured under the "plugins" section before adding them here.
+  # plugins have been configured under the "plugins" section before adding them here.
   load_plugins: []
 
   # -- Watch config file and rules files for modification.
