add toleration for node-role.kubernetes.io/control-plane
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -101,10 +101,12 @@ nodeSelector: {}
 # -- Affinity constraint for pods' scheduling.
 affinity: {}
 
-# -- Tolerations to allow Falco to run on Kubernetes 1.6 masters.
+# -- Tolerations to allow Falco to run on Kubernetes masters.
 tolerations:
   - effect: NoSchedule
     key: node-role.kubernetes.io/master
+  - effect: NoSchedule
+    key: node-role.kubernetes.io/control-plane
 
 # -- Parameters used
 healthChecks:
